# PROJ_Q_YV35_Host_Update_Tool

./: CMakeLists.txt  README.md
common/: util_common.c
common/freeipmi/: util_freeipmi.c  util_ipmiraw.c
common/freeipmi/include/: util_freeipmi.h  util_ipmiraw.h
common/include/: util_common.h
common/plock/: util_plock.c
common/plock/include/: util_plock.h
src/: main.c
src/fwupdate/: fw_update.c
src/fwupdate/dev/: bic_fw_update.c
src/fwupdate/dev/include/: dev_fw_update.h
src/fwupdate/include/: fw_update.h
src/include/: proj_config.h
